# sfn_messages

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  temp.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: check-commit.yml
sfn_messages/core/: enum_mixin.py  errors.py  registry.py  xml_utils.py
src/sfn_messages/: __init__.py  cli.py
src/sfn_messages/core/: __init__.py  base_message.py  code_description.py  enum_mixin.py  enums.py  errors.py  models.py  registry.py  types.py  xml_utils.py
src/sfn_messages/core/enums/: __init__.py  system_domain.py
src/sfn_messages/ldl/: ldl0001.py  ldl0002.py  ldl0003.py  ldl0004.py  ldl0006.py  ldl0008.py  ldl0011.py  ldl0014.py  ldl0022.py
src/sfn_messages/lpi/: lpi0001.py  lpi0002.py  lpi0003.py  lpi0004.py  types.py
src/sfn_messages/ltr/: ltr0001.py  ltr0002.py  ltr0003.py  ltr0004.py  ltr0006.py  types.py
src/sfn_messages/slb/: slb0001.py  slb0002.py  slb0007.py  types.py
src/sfn_messages/sme/: sme0001.py  sme0002.py  sme0003.py  types.py
src/sfn_messages/str/: str0001.py  str0004.py  str0005.py  str0006.py  str0007.py  str0008.py  str0010.py  str0011.py  str0013.py  str0014.py  str0015.py  str0016.py  str0017.py  str0025.py  str0034.py  str0043.py  str0047.py  str0048.py  types.py  validation.py  validations.py
tests/: conftest.py
tests/core/: test_error_mapping.py  test_errors.py  test_models.py  test_types.py
tests/ldl/: test_ldl0001.py  test_ldl0002.py  test_ldl0003.py  test_ldl0004.py  test_ldl0006.py  test_ldl0008.py  test_ldl0011.py  test_ldl0014.py  test_ldl0022.py
tests/lpi/: test_lpi0001.py  test_lpi0002.py  test_lpi0003.py  test_lpi0004.py  test_types.py
tests/ltr/: test_ltr0001.py  test_ltr0002.py  test_ltr0003.py  test_ltr0004.py  test_ltr0006.py  test_types.py
tests/slb/: test_slb0001.py  test_slb0002.py  test_slb0007.py  test_types.py
tests/sme/: test_sme0001.py  test_sme0002.py  test_sme0003.py
tests/str/: test_str0001.py  test_str0004.py  test_str0005.py  test_str0006.py  test_str0007.py  test_str0008.py  test_str0010.py  test_str0011.py  test_str0013.py  test_str0014.py  test_str0015.py  test_str0016.py  test_str0017.py  test_str0025.py  test_str0034.py  test_str0043.py  test_str0047.py  test_str0048.py  test_types.py  test_validations.py
