[build-system]
requires = ["uv_build >=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "sfn-messages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
    "ruff>=0.14.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.ruff]
target-version = "py314"
line-length = 119
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S311", "COM812"]

[tool.ruff.lint.per-file-ignores]
"src/mq_proxy/endpoints/*.py" = ["TC001"]
"tests/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pytest.ini_options]
pythonpath = ["."]
