[build-system]
requires = ["uv_build >=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "sfn-messages"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
urls = {repository = "https://github.com/zander-br/sfn_messages"}
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "pydantic >=2.12.4,<3",
]

[dependency-groups]
dev = [
    "mypy >=1.18.2,<2",
    "pytest >=9.0.1,<10",
    "ruff >=0.14.5,<0.15",
]

[tool.ruff]
target-version = "py314"
line-length = 119
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S311", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
strict = true
plugins = ["pydantic.mypy"]
files = ["src/**/*.py", "tests/**/*.py"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
