[build-system]
requires = ["uv_build >=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "sfn-messages"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
urls = {repository = "https://github.com/zander-br/sfn_messages"}
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "defusedxml >=0.7.1,<0.8",
    "pydantic >=2.12.4,<3",
    "validate-docbr>=1.11.1",
]

[dependency-groups]
type = [
    "types-defusedxml >=0.7.0,<0.8",
]
dev = [
    {include-group = "type"},
    "coverage >=7.12.0,<8",
    "mypy >=1.18.2,<2",
    "pytest >=9.0.1,<10",
    "ruff >=0.14.5,<0.15",
]

[tool.ruff]
target-version = "py314"
line-length = 119
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S311", "COM812", "TC001", "TC002", "TC003", "DTZ001"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S314"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
strict = true
plugins = ["pydantic.mypy"]
files = ["src/**/*.py", "tests/**/*.py"]

[[tool.mypy.overrides]]
module = [
    "validate_docbr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "@abstractmethod",
]
